--- a/Unico teste real da internet/server/package.json
+++ b/Unico teste real da internet/server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "child-process": "^1.0.2",
     "cors": "^2.8.4",
     "express": "^4.16.1",
     "google-auth-library": "^0.11.0",
