Adicionar npm start

--- a/Unico teste real da internet/client/package.json
+++ b/Unico teste real da internet/client/package.json
@@ -3,6 +3,9 @@
     "description": "Client-side of top testes",
     "authors": "Leonardo A.; Guilherme S.; Pietro I.",
     "version": "1.0.0",
+    "scripts": {
+        "start": "http-server"
+    },
     "dependencies": {
         "http-server": "^0.10.0"
     }
